--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape-watch ./app/tests/test-loader.js -r babel-register | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,10 @@
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
+    "babel-register": "6.16.3",
+    "tap-spec": "4.1.1",
     "tape": "4.6.2",
+    "tape-watch": "2.2.3",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2"
   }
