--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-register": "6.16.3",
+    "react-addons-test-utils": "15.3.2",
     "tap-spec": "4.1.1",
     "tape": "4.6.2",
     "tape-watch": "2.2.3",
