testing react component with enzyme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
-app:
-  mem_limit: 400m
-  memswap_limit: 1g
-  environment:
-    - "TZ=Europe/Warsaw"
-  build: .
-  ports: 
-    - '3333:3333'
-  volumes:
-    - .:/home/nodejs/app
-    - /home/nodejs/app/node_modules
-  command: npm start
+version: '2'
+services:
+  app:
+    mem_limit: 400m
+    memswap_limit: 1g
+    environment:
+      - "TZ=Europe/Warsaw"
+    build: .
+    ports: 
+      - '3333:3333'
+    volumes:
+      - .:/home/nodejs/app
+      - /home/nodejs/app/node_modules
+    command: npm start
